--- a/jquery/playground.html
+++ b/jquery/playground.html
@@ -13,8 +13,10 @@
       crossorigin="anonymous"
     />
 
-    <!-- using jquery and animate cdns -->
+    <!-- using jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+    <!-- using animate.css -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.1/animate.min.css"
@@ -22,8 +24,16 @@
 
     <script>
       $(document).ready(function () {
-        $("button").addClass("animated bounce");
-        $(".well").addClass("animated shake");
+        $("#target1").css("color", "red");
+        $("#target4").html("<em>#target4</em>");
+        $("#target4").remove();
+        $("#target2").appendTo("#right-well");
+        $("#target5").clone().appendTo("#left-well");
+        $("#target1").parent().css("background-color", "red");
+        $("#right-well").children().css("color", "orange");
+        $(".target:nth-child(2)").addClass("animated bounce");
+        $(".target:even").addClass("animated shake");
+        $("body").addClass("animated hinge");
       });
     </script>
   </head>
