--- a/react/public/index.html
+++ b/react/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Playground</title>
+    <title>Istamosh's React Playground</title>
   </head>
   <body>
     <div id="root"></div>
