--- a/five-projects-certificate/my-app/public/index.html
+++ b/five-projects-certificate/my-app/public/index.html
@@ -31,6 +31,7 @@
     <!-- <div id="root"></div> -->
 
     <div id="app"></div>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
       This HTML file is a template.
