md preview: working on backticks recognition

--- a/five-projects-certificate/my-app/public/index.html
+++ b/five-projects-certificate/my-app/public/index.html
@@ -38,6 +38,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <!-- Bootstrap Icons 1.11.3 -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css"
